AlterandoErroDeResultado. Acrescentando Operações.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <div id="form">
-        <!--Tag par criar formulários-->
+        <!--Tag para criar formulários-->
 
         <!--Type é o tipo de informação que será recebido;
         id é o identificador para o Css;
